# ot-realtek

./: .gitignore  .gitmodules  CMakeLists.txt  includepath.cmake  openthread_csl_2aeb8b8.patch
.github/workflows/: build.yml
script/: build  matter_ota_pack  openthread.cmake  post_build  pre_build  sdk.cmake
src/: alarm.c  mac_frame_add.cpp  misc.c  radio.c  system.c
src/bee4/: CMakeLists.txt  arm-none-eabi.cmake  bee4-mbedtls-config.h  board.h  example_vendor_hook.cpp  main_ns.c  openthread-core-bee4-config-check.h  openthread-core-bee4-config.h  platform-bee.h  system.c  system_rtl.c  thread_task.c  uart.c  vendor_hook.h  version.h  zb_main.c  zb_tst_cfg.h
src/bee4/cmake/: bee4-internal.cmake  bee4-internal.cmake.backup  bee4-mbedtls.cmake  bee4-peripheral.cmake  openthread-bee4.cmake
src/bee4/common/: common.h  mac_driver_mpan.h  threading_alt.h
src/bee4/rtl8777g/: app.ld  flash map.ini
